hands-on/Jenkins/Session-3a-tomcat/clarusway-tomcat-cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  This Cloudformation Template creates 2 Tomcat Server (Stage and Production) on EC2 Instance. Applicable in N. Virginia(us-east-1).


Parameters:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must one of the existing EC2 KeyPair

Resources:
  TomcatServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP for Tomcat Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  TomcatServerStage:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0889a44b331db0194
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt TomcatServerSecurityGroup.GroupId
      Tags:                
        -                        
          Key: Name
          Value: !Sub tomcat-stage-${AWS::StackName}   
      UserData:
        Fn::Base64: |
          #! /bin/bash
          dnf update -y
          dnf install java-11-amazon-corretto -y
          cd /tmp
          wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.8/bin/apache-tomcat-10.1.8.zip
          unzip apache-tomcat-*.zip
          mv apache-tomcat-10.1.8 /opt/tomcat
          chmod +x /opt/tomcat/bin/*
  TomcatServerProduction:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0889a44b331db0194
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      SecurityGroupIds:
        - !GetAtt TomcatServerSecurityGroup.GroupId
      Tags:                
        -                        
          Key: Name
          Value: !Sub tomcat-production-${AWS::StackName}   
      UserData:
        Fn::Base64: |
          #! /bin/bash
          dnf update -y
          dnf install java-11-amazon-corretto -y
          cd /tmp
          wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.8/bin/apache-tomcat-10.1.8.zip
          unzip apache-tomcat-*.zip
          mv apache-tomcat-10.1.8 /opt/tomcat
          chmod +x /opt/tomcat/bin/*
Outputs:
  TomcatServerStage:
    Description: Tomcat Server Stage DNS Name
    Value: !Sub 
      - ${PublicAddress}
      - PublicAddress: !GetAtt TomcatServerStage.PublicDnsName
  TomcatServerProduction:
    Description: Tomcat Server Production DNS Name
    Value: !Sub 
      - ${PublicAddress}
      - PublicAddress: !GetAtt TomcatServerProduction.PublicDnsName
